--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.15.2",
         "connect-redis": "^3.3.3",
+        "csurf": "^1.9.0",
         "express": "^4.14.0",
         "express-session": "^1.15.6",
         "knox": "^0.9.2",
