--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "connect-redis": "^3.3.3",
         "csurf": "^1.9.0",
         "express": "^4.16.2",
+        "express-force-https": "^1.0.0",
         "express-session": "^1.15.6",
+        "heroku-ssl-redirect": "0.0.4",
         "knox": "^0.9.2",
         "multer": "^1.2.0",
         "spiced-pg": "spicedacademy/spiced-pg",
