--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "body-parser": "^1.15.2",
         "connect-redis": "^3.3.3",
         "csurf": "^1.9.0",
+        "ejs": "^2.5.7",
         "express": "^4.16.2",
         "express-force-https": "^1.0.0",
         "express-session": "^1.15.6",
